<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/takeAPicture"
            android:id="@+id/takeAPictureButton"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distributionButton1"
            android:id="@+id/distributionButton"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/factsButton1"
            android:id="@+id/factsButton"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz1"
            android:id="@+id/quizButton"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionButton1"
            android:id="@+id/questionButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_developer"
            android:id="@+id/contactDeveloper"
            android:layout_weight="1" />

    </LinearLayout>
</RelativeLayout>
